refactor: source quality